# qml-demo

./: CMakeLists.txt  main.cpp
resources/: qmldemo.qrc
